simplify image-cropper#init

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "zuul": "^1.11.0"
   },
   "dependencies": {
+    "after": "^0.8.1",
     "dom-events": "^0.1.1",
     "image-loaded": "0.0.2"
   }
