--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vanilla js-widget for the browser dealing with cropping images",
   "main": "image-cropper.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "zuul ./test/*"
   },
   "author": "David Björklund <david.bjorklund@gmail.com> (http://davidbjorklund.com/)",
   "license": "MIT",
